# PPS-project

./: .gitignore  CMakeLists.txt  FILES_EXPLAINED.md  Makefile  README.md  bubble-sort  bubble.c  bubbleSort  cleanup_suggest.sh  compile_commands.json  heap.c  heapsort  insertion.c  insertion_sort  main.c  n  patter(not in project).c  patter-not-in-project.c  quick-sort  quick.c  quickSort  run_all.sh  selection.c  selectionSort  selectionsort.c  shell.c  shellSort  shell_sort  sort_demo  sorts.h  straightInsertionSort  straightsort.c  utils.c
.github/workflows/: ci.yml
archive/: heapsort.c  new_version_CMakeLists.txt  quickSort.c  selectionSort.c  shellSort.c  sort_main.h  straightInstertionSort.c
archive/new_version_original/: CMakeLists.txt
archive/old/: straightInstertionSort.c
include/: sort_main.h
new version/: a.out  bubbleSort.c  heapsort  heapsort.c  quickSort.c  selection1  selectionSort  selectionSort copy.c  selectionSort-copy.c  selectionSort.c  shellSort.c  sort.h  sort_it.c  sort_utils.c  sort_utils.h  test
old version/: README.md  bubble-sort.c  quick-sort.c  selectionsort.c  shell-sort.c
src/: Makefile  a.out  bubbleSort.c  heapsort.c  heapsort_test  main.c  quickSort.c  selectionSort.c  shellSort.c  straightInsertionSort.c
